--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "html-to-image": "^1.11.11",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
